deploy/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 1f7370361026946f0393c3e33b58947d2ea7efe0
    app.quarkus.io/build-timestamp: 2021-07-26 - 14:29:29 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: smart-doc-quarkus-example
    app.kubernetes.io/version: 2.0.3
  name: smart-doc-quarkus-example
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: smart-doc-quarkus-example
    app.kubernetes.io/version: 2.0.3
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 1f7370361026946f0393c3e33b58947d2ea7efe0
    app.quarkus.io/build-timestamp: 2021-07-26 - 14:29:29 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/version: 2.0.3
    app.kubernetes.io/name: smart-doc-quarkus-example
  name: smart-doc-quarkus-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 2.0.3
      app.kubernetes.io/name: smart-doc-quarkus-example
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 1f7370361026946f0393c3e33b58947d2ea7efe0
        app.quarkus.io/build-timestamp: 2021-07-26 - 14:29:29 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/version: 2.0.3
        app.kubernetes.io/name: smart-doc-quarkus-example
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: shalousun/smart-doc-quarkus-example:2.0.3
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: smart-doc-quarkus-example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 1f7370361026946f0393c3e33b58947d2ea7efe0
    app.quarkus.io/build-timestamp: 2021-07-26 - 14:29:29 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: smart-doc-quarkus-example
    app.kubernetes.io/version: 2.0.3
  name: smart-doc-quarkus-example
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: smart-doc-quarkus-example
                port:
                  name: http
            path: /
            pathType: Prefix
